# iced_math

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: pipeline.rs
docs/: ANNOUNCE-v0.3.0.md  ANNOUNCE-v0.4.0.md
examples/: to_svg.rs  viewer.rs
src/: boxer.rs  color.rs  error.rs  font.rs  ir.rs  lib.rs  parse.rs  spacing.rs  svg.rs  widget.rs
tests/: api.rs  boxer_atom.rs  boxer_bigop.rs  boxer_fenced.rs  boxer_frac.rs  boxer_radical.rs  boxer_subsup.rs  font_glyph.rs  font_math_table.rs  font_math_variant.rs  font_metrics.rs  font_outline.rs  font_smoke.rs  parse_atom.rs  parse_fenced.rs  parse_frac_sqrt.rs  parse_greek_ops.rs  parse_subsup.rs  pixel_snapshots.rs  spacing.rs  svg_emit_smoke.rs  svg_snapshots.rs
tests/corpus/: 05_subsup.tex  06_braced_sup.tex  08_complex_frac.tex  10_sqrt_with_degree.tex  11_greek_lower.tex  12_greek_upper.tex  14_int.tex  21_nested_frac.tex  22_double_sup.tex  23_sub_then_sup.tex  24_neg_exponent.tex  27_prod_display.tex  28_sqrt_frac.tex  29_paren_chain.tex  31_trig_functions.tex  32_lim_display.tex  33_accents.tex  34_pmatrix.tex  35_cases.tex  36_mathbb.tex  37_mathcal.tex  38_binom.tex  39_align.tex  40_gather.tex  41_equation.tex
tests/snapshots/: pixel_snapshots__01_atom@01_atom.tex.snap  pixel_snapshots__02_sum_pair@02_sum_pair.tex.snap  pixel_snapshots__03_subscript@03_subscript.tex.snap  pixel_snapshots__04_superscript@04_superscript.tex.snap  pixel_snapshots__05_subsup@05_subsup.tex.snap  pixel_snapshots__06_braced_sup@06_braced_sup.tex.snap  pixel_snapshots__07_half@07_half.tex.snap  pixel_snapshots__08_complex_frac@08_complex_frac.tex.snap  pixel_snapshots__09_sqrt@09_sqrt.tex.snap  pixel_snapshots__10_sqrt_with_degree@10_sqrt_with_degree.tex.snap  pixel_snapshots__11_greek_lower@11_greek_lower.tex.snap  pixel_snapshots__12_greek_upper@12_greek_upper.tex.snap  pixel_snapshots__13_sum_display@13_sum_display.tex.snap  pixel_snapshots__14_int@14_int.tex.snap  pixel_snapshots__15_left_right@15_left_right.tex.snap  pixel_snapshots__16_bracket@16_bracket.tex.snap  pixel_snapshots__17_einstein@17_einstein.tex.snap  pixel_snapshots__18_quadratic@18_quadratic.tex.snap  pixel_snapshots__19_pythagoras@19_pythagoras.tex.snap  pixel_snapshots__20_long_chain@20_long_chain.tex.snap  pixel_snapshots__21_nested_frac@21_nested_frac.tex.snap  pixel_snapshots__22_double_sup@22_double_sup.tex.snap  pixel_snapshots__23_sub_then_sup@23_sub_then_sup.tex.snap  pixel_snapshots__24_neg_exponent@24_neg_exponent.tex.snap  (+58 more)
(+2 files in other folders)
