[package]
name = "iced_math"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Native LaTeX math widget for Iced 0.14 — pure Rust, zero JS"
repository = "https://github.com/minchenlee/iced_math"
license = "MIT OR Apache-2.0"
keywords = ["iced", "math", "latex", "katex", "tex"]
categories = ["gui", "rendering"]

[dependencies]
iced = { version = "0.14", default-features = false, features = ["svg", "advanced", "thread-pool", "x11"] }
pulldown-latex = "0.7"
ttf-parser = "0.25"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "glob"] }
resvg = "0.46"
tiny-skia = "0.11"
criterion = "0.5"
# Activates iced's renderer + windowing shell for the `viewer` example only.
# The library itself stays renderer-agnostic (it merely emits SVG bytes).
iced = { version = "0.14", default-features = false, features = ["wgpu", "tiny-skia"] }

[lib]
name = "iced_math"
path = "src/lib.rs"

[[bench]]
name = "pipeline"
harness = false
